# Primecam-FE-py

./: .gitignore  PCSerial.py  Pipfile  README.md  pyproject.toml
mcu_firmware/primecam/: primecam.ino
mcu_firmware/primecamfe_prototype/: FirmwareUpdater.py  aarch64-bossac  primecamfe_prototype.ino  x64-bossac
primecamfe/: PCSerial.py  __init__.py
src/primecamfe/: PCSerial.py
tests/: testcases.py
