[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build-meta"

[project]
authors = [{name="Cody Roberson", email="carobers@asu.edu"}]
description = ["This is a library for controlling the Primecam RFSoC frontend amplifiers"]
license = "MIT"
readme = {file = "README.md", content-type = "text/markdown"}
version = "0.0.1"
requires-python = ">= 3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"

]
Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/me/spam/issues"