[build-system]
requires = ["setuptools", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[project]
name = "primecamfe"
authors = [{name="Cody Roberson", email="carobers@asu.edu"}]
description = "This is a library for controlling the Primecam RFSoC frontend amplifiers"
readme = {file = "README.md", content-type = "text/markdown"}
#version = "0.0.1"
dynamic = ["version"]
requires-python = ">= 3.8"
classifiers = [
    "License :: MIT License",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"

]
dependencies = [
    "pyserial==3.5"
]

